--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-sass": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-html-validation": "latest",
-    "grunt-text-replace": "latest"
+    "grunt-text-replace": "latest",
+    "grunt-include-replace": "latest"
   }
 }
