updates gruntfile and packages to launch local server, move files into style assets folder and makes references relative to server root

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-watch": "latest",
     "grunt-html-validation": "latest",
     "grunt-text-replace": "latest",
-    "grunt-include-replace": "latest"
+    "grunt-include-replace": "latest",
+    "grunt-express": "latest"
   }
 }
