updates foundation section of bower task to move functions partial into correct location

--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,8 @@
       "fonts" : "fonts/*"
     },
     "foundation": {
-      "scss/foundation": "scss/foundation/*.scss",
-      "scss/foundation/components/": "scss/foundation/components/*.scss",
+      "scss/foundation": "scss/foundation/_settings.scss",
+      "scss/foundation/components/": ["scss/foundation/components/*.scss","scss/foundation/_functions.scss"],
       "scss": "scss/*.scss",
       "js/foundation" : "js/foundation/*.js",
       "js/vendor" : "js/vendor/*.js"
