--- a/prepros.cfg
+++ b/prepros.cfg
@@ -222,6 +222,24 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "fd4fa461": {
+          "id": "fd4fa461",
+          "path": "_media.scss",
+          "output": "_media.css",
+          "name": "_media.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
