updates prepros cfg
adds new path for output

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -48,6 +48,24 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "835d340d": {
+          "id": "835d340d",
+          "path": "app/50main.scss",
+          "output": "50main.css",
+          "name": "50main.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "nested",
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
