moves toolbar and variables to css

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -49,22 +49,62 @@
           "height": 0,
           "width": 0
         },
-        "835d340d": {
-          "id": "835d340d",
-          "path": "app/50main.scss",
+        "6df44060": {
+          "id": "6df44060",
+          "path": "app/_50main.scss",
           "output": "50main.css",
-          "name": "50main.scss",
+          "name": "_50main.scss",
           "category": "CSS",
           "autoCompile": true,
-          "autoprefixer": true,
+          "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
           "compass": false,
           "fullCompass": false,
-          "outputStyle": "nested",
+          "outputStyle": "compact",
           "customOutput": true,
           "imported": false,
           "parents": [],
+          "type": "sass"
+        },
+        "06fced59": {
+          "id": "06fced59",
+          "path": "app/_variables.scss",
+          "output": "app/_variables.css",
+          "name": "_variables.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6df44060"
+          ],
+          "type": "sass"
+        },
+        "423742dd": {
+          "id": "423742dd",
+          "path": "app/_toolbar.scss",
+          "output": "app/_toolbar.css",
+          "name": "_toolbar.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6df44060"
+          ],
           "type": "sass"
         }
       },
