--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,22 +9,6 @@
       "name": "Homepage-Spring-Update",
       "path": "",
       "files": {
-        "641e4a27": {
-          "id": "641e4a27",
-          "path": "50main.css",
-          "output": "50main-dist.css",
-          "name": "50main.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "3f2018e1": {
           "id": "3f2018e1",
           "path": "springhome_index.html",
@@ -49,24 +33,6 @@
           "height": 0,
           "width": 0
         },
-        "6df44060": {
-          "id": "6df44060",
-          "path": "app/_50main.scss",
-          "output": "50main.css",
-          "name": "_50main.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "compact",
-          "customOutput": true,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
         "06fced59": {
           "id": "06fced59",
           "path": "app/_variables.scss",
@@ -83,7 +49,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "6df44060"
+            "b4144c5e"
           ],
           "type": "sass"
         },
@@ -103,7 +69,121 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "6df44060"
+            "b4144c5e"
+          ],
+          "type": "sass"
+        },
+        "b4144c5e": {
+          "id": "b4144c5e",
+          "path": "app/_home2016.scss",
+          "output": "home2016.css",
+          "name": "_home2016.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "compact",
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "28406d04": {
+          "id": "28406d04",
+          "path": "home2016.css",
+          "output": "home2016-dist.css",
+          "name": "home2016.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "f7bb19dd": {
+          "id": "f7bb19dd",
+          "path": "app/_footer.scss",
+          "output": "app/_footer.css",
+          "name": "_footer.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b4144c5e"
+          ],
+          "type": "sass"
+        },
+        "0fe4d245": {
+          "id": "0fe4d245",
+          "path": "app/_carousel.scss",
+          "output": "app/_carousel.css",
+          "name": "_carousel.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b4144c5e"
+          ],
+          "type": "sass"
+        },
+        "72d60da7": {
+          "id": "72d60da7",
+          "path": "app/_callstoaction.scss",
+          "output": "app/_callstoaction.css",
+          "name": "_callstoaction.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b4144c5e"
+          ],
+          "type": "sass"
+        },
+        "69c46b8d": {
+          "id": "69c46b8d",
+          "path": "app/_panel.scss",
+          "output": "app/_panel.css",
+          "name": "_panel.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "b4144c5e"
           ],
           "type": "sass"
         }
