Adds style images

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -186,6 +186,32 @@
             "b4144c5e"
           ],
           "type": "sass"
+        },
+        "0d537d8c": {
+          "id": "0d537d8c",
+          "path": "media/assets/homepagespring2016/home_headerbg.jpg",
+          "output": "media/assets/homepagespring2016/home_headerbg.jpg",
+          "name": "home_headerbg.jpg",
+          "category": "IMAGE",
+          "size": 145708,
+          "type": "jpg",
+          "initialSize": 145708,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9230a169": {
+          "id": "9230a169",
+          "path": "media/assets/homepagespring2016/calltoactbg.png",
+          "output": "media/assets/homepagespring2016/calltoactbg.png",
+          "name": "calltoactbg.png",
+          "category": "IMAGE",
+          "size": 623905,
+          "type": "png",
+          "initialSize": 623905,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
