mobile device hover opacity

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -246,6 +246,17 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "bf2493a7": {
+          "id": "bf2493a7",
+          "path": "2column.html",
+          "output": "2column.html",
+          "name": "2column.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
