--- a/prepros.cfg
+++ b/prepros.cfg
@@ -213,24 +213,6 @@
           "height": 0,
           "width": 0
         },
-        "ba273f3a": {
-          "id": "ba273f3a",
-          "path": "app/main2016.scss",
-          "output": "main2016.css",
-          "name": "main2016.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": true,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "compact",
-          "customOutput": true,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
         "abf837a4": {
           "id": "abf837a4",
           "path": "main2016.css",
@@ -257,6 +239,24 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "0115b650": {
+          "id": "0115b650",
+          "path": "app/_main2016.scss",
+          "output": "app/_main2016.css",
+          "name": "_main2016.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
