updates prerpros and removes bluenav from main css

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -243,7 +243,7 @@
         "0115b650": {
           "id": "0115b650",
           "path": "app/_main2016.scss",
-          "output": "app/_main2016.css",
+          "output": "main2016.css",
           "name": "_main2016.scss",
           "category": "CSS",
           "autoCompile": true,
@@ -253,7 +253,7 @@
           "compass": false,
           "fullCompass": false,
           "outputStyle": "expanded",
-          "customOutput": false,
+          "customOutput": true,
           "imported": false,
           "parents": [],
           "type": "sass"
