--- a/prepros.cfg
+++ b/prepros.cfg
@@ -257,6 +257,17 @@
           "imported": false,
           "parents": [],
           "type": "sass"
+        },
+        "306dc1b3": {
+          "id": "306dc1b3",
+          "path": "newsroom.html",
+          "output": "newsroom.html",
+          "name": "newsroom.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
