--- a/prepros.cfg
+++ b/prepros.cfg
@@ -69,7 +69,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "b4144c5e"
+            "b4144c5e",
+            "0115b650"
           ],
           "type": "sass"
         },
@@ -123,7 +124,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "b4144c5e"
+            "b4144c5e",
+            "0115b650"
           ],
           "type": "sass"
         },
@@ -268,6 +270,132 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "ab5ed3ce": {
+          "id": "ab5ed3ce",
+          "path": "app/ContentTypes/_oldhomepage.scss",
+          "output": "app/ContentTypes/_oldhomepage.css",
+          "name": "_oldhomepage.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "7263355e": {
+          "id": "7263355e",
+          "path": "app/ContentTypes/_navmenu.scss",
+          "output": "app/ContentTypes/_navmenu.css",
+          "name": "_navmenu.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "08fd0c18": {
+          "id": "08fd0c18",
+          "path": "app/ContentTypes/_TableStyles.scss",
+          "output": "app/ContentTypes/_TableStyles.css",
+          "name": "_TableStyles.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "ced83014": {
+          "id": "ced83014",
+          "path": "app/ContentTypes/_AdmissionsStyles.scss",
+          "output": "app/ContentTypes/_AdmissionsStyles.css",
+          "name": "_AdmissionsStyles.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "948619a6": {
+          "id": "948619a6",
+          "path": "app/ContentTypes/_HighlightBox.scss",
+          "output": "app/ContentTypes/_HighlightBox.css",
+          "name": "_HighlightBox.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "79258a5d": {
+          "id": "79258a5d",
+          "path": "app/ContentTypes/_CallsToAction.scss",
+          "output": "app/ContentTypes/_CallsToAction.css",
+          "name": "_CallsToAction.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "37ab0c91": {
+          "id": "37ab0c91",
+          "path": "app/ContentTypes/_hero.scss",
+          "output": "app/ContentTypes/_hero.css",
+          "name": "_hero.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
