updates prepros and styles

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -396,6 +396,42 @@
           "imported": false,
           "parents": [],
           "type": "sass"
+        },
+        "5ec38b25": {
+          "id": "5ec38b25",
+          "path": "app/ContentTypes/_newsroom.scss",
+          "output": "app/ContentTypes/_newsroom.css",
+          "name": "_newsroom.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "06456fba": {
+          "id": "06456fba",
+          "path": "app/ContentTypes/content.scss",
+          "output": "app/ContentTypes/content.css",
+          "name": "content.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
