Revert "Merge pull request #6 from msudenver/master"
This reverts commit fcca650527018fa1ec6e512cb5512fa54d1b06b1, reversing
changes made to 1b273c609a46bf2638dca325cc0a7178096acb69.

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -213,6 +213,24 @@
           "height": 0,
           "width": 0
         },
+        "ba273f3a": {
+          "id": "ba273f3a",
+          "path": "app/main2016.scss",
+          "output": "main2016.css",
+          "name": "main2016.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "compact",
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
         "abf837a4": {
           "id": "abf837a4",
           "path": "main2016.css",
@@ -228,35 +246,6 @@
           "imported": false,
           "parents": [],
           "type": "css"
-        },
-        "bf2493a7": {
-          "id": "bf2493a7",
-          "path": "2column.html",
-          "output": "2column.html",
-          "name": "2column.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "0115b650": {
-          "id": "0115b650",
-          "path": "app/_main2016.scss",
-          "output": "app/_main2016.css",
-          "name": "_main2016.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
         }
       },
       "deploymentHistory": {},
