updates prepros config file

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -49,7 +49,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "b4144c5e"
+            "b4144c5e",
+            "0115b650"
           ],
           "type": "sass"
         },
@@ -254,7 +255,7 @@
           "libSass": true,
           "compass": false,
           "fullCompass": false,
-          "outputStyle": "expanded",
+          "outputStyle": "compact",
           "customOutput": true,
           "imported": false,
           "parents": [],
@@ -298,13 +299,15 @@
           "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
-          "libSass": false,
+          "libSass": true,
           "compass": false,
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
           "type": "sass"
         },
         "08fd0c18": {
@@ -321,8 +324,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
           "type": "sass"
         },
         "ced83014": {
@@ -339,8 +344,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
           "type": "sass"
         },
         "948619a6": {
@@ -357,8 +364,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
           "type": "sass"
         },
         "79258a5d": {
@@ -375,8 +384,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
           "type": "sass"
         },
         "37ab0c91": {
@@ -393,8 +404,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
           "type": "sass"
         },
         "5ec38b25": {
@@ -411,8 +424,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
           "type": "sass"
         },
         "06456fba": {
@@ -429,9 +444,24 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
           "type": "sass"
+        },
+        "d28aa1c9": {
+          "id": "d28aa1c9",
+          "path": "media/assets/msudenver_logo.png",
+          "output": "media/assets/msudenver_logo.png",
+          "name": "msudenver_logo.png",
+          "category": "IMAGE",
+          "size": 8562,
+          "type": "png",
+          "initialSize": 8562,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
