updates min-height for nabber to 48px

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -170,26 +170,6 @@
           ],
           "type": "sass"
         },
-        "69c46b8d": {
-          "id": "69c46b8d",
-          "path": "app/_panel.scss",
-          "output": "app/_panel.css",
-          "name": "_panel.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": false,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "b4144c5e"
-          ],
-          "type": "sass"
-        },
         "0d537d8c": {
           "id": "0d537d8c",
           "path": "media/assets/homepagespring2016/home_headerbg.jpg",
@@ -243,24 +223,6 @@
           "parents": [],
           "type": "html"
         },
-        "0115b650": {
-          "id": "0115b650",
-          "path": "app/_main2016.scss",
-          "output": "main2016.css",
-          "name": "_main2016.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "compact",
-          "customOutput": true,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
         "306dc1b3": {
           "id": "306dc1b3",
           "path": "newsroom.html",
@@ -272,29 +234,64 @@
           "parents": [],
           "type": "html"
         },
-        "ab5ed3ce": {
-          "id": "ab5ed3ce",
-          "path": "app/ContentTypes/_oldhomepage.scss",
-          "output": "app/ContentTypes/_oldhomepage.css",
-          "name": "_oldhomepage.scss",
+        "d28aa1c9": {
+          "id": "d28aa1c9",
+          "path": "media/assets/msudenver_logo.png",
+          "output": "media/assets/msudenver_logo.png",
+          "name": "msudenver_logo.png",
+          "category": "IMAGE",
+          "size": 8562,
+          "type": "png",
+          "initialSize": 8562,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ced83014": {
+          "id": "ced83014",
+          "path": "app/ContentTypes/_AdmissionsStyles.scss",
+          "output": "app/ContentTypes/_AdmissionsStyles.css",
+          "name": "_AdmissionsStyles.scss",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
-          "libSass": false,
+          "libSass": true,
           "compass": false,
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
           "type": "sass"
         },
-        "7263355e": {
-          "id": "7263355e",
-          "path": "app/ContentTypes/_navmenu.scss",
-          "output": "app/ContentTypes/_navmenu.css",
-          "name": "_navmenu.scss",
+        "79258a5d": {
+          "id": "79258a5d",
+          "path": "app/ContentTypes/_CallsToAction.scss",
+          "output": "app/ContentTypes/_CallsToAction.css",
+          "name": "_CallsToAction.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
+          "type": "sass"
+        },
+        "948619a6": {
+          "id": "948619a6",
+          "path": "app/ContentTypes/_HighlightBox.scss",
+          "output": "app/ContentTypes/_HighlightBox.css",
+          "name": "_HighlightBox.scss",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -319,67 +316,7 @@
           "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
-          "libSass": false,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "0115b650"
-          ],
-          "type": "sass"
-        },
-        "ced83014": {
-          "id": "ced83014",
-          "path": "app/ContentTypes/_AdmissionsStyles.scss",
-          "output": "app/ContentTypes/_AdmissionsStyles.css",
-          "name": "_AdmissionsStyles.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": false,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "0115b650"
-          ],
-          "type": "sass"
-        },
-        "948619a6": {
-          "id": "948619a6",
-          "path": "app/ContentTypes/_HighlightBox.scss",
-          "output": "app/ContentTypes/_HighlightBox.css",
-          "name": "_HighlightBox.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": false,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "0115b650"
-          ],
-          "type": "sass"
-        },
-        "79258a5d": {
-          "id": "79258a5d",
-          "path": "app/ContentTypes/_CallsToAction.scss",
-          "output": "app/ContentTypes/_CallsToAction.css",
-          "name": "_CallsToAction.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": false,
+          "libSass": true,
           "compass": false,
           "fullCompass": false,
           "outputStyle": "expanded",
@@ -399,7 +336,27 @@
           "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
-          "libSass": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
+          "type": "sass"
+        },
+        "7263355e": {
+          "id": "7263355e",
+          "path": "app/ContentTypes/_navmenu.scss",
+          "output": "app/ContentTypes/_navmenu.css",
+          "name": "_navmenu.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
           "compass": false,
           "fullCompass": false,
           "outputStyle": "expanded",
@@ -430,6 +387,42 @@
           ],
           "type": "sass"
         },
+        "ab5ed3ce": {
+          "id": "ab5ed3ce",
+          "path": "app/ContentTypes/_oldhomepage.scss",
+          "output": "app/ContentTypes/_oldhomepage.css",
+          "name": "_oldhomepage.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "0115b650": {
+          "id": "0115b650",
+          "path": "app/_main2016.scss",
+          "output": "main2016.css",
+          "name": "_main2016.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "compact",
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
         "06456fba": {
           "id": "06456fba",
           "path": "app/ContentTypes/content.scss",
@@ -450,18 +443,23 @@
           ],
           "type": "sass"
         },
-        "d28aa1c9": {
-          "id": "d28aa1c9",
-          "path": "media/assets/msudenver_logo.png",
-          "output": "media/assets/msudenver_logo.png",
-          "name": "msudenver_logo.png",
-          "category": "IMAGE",
-          "size": 8562,
-          "type": "png",
-          "initialSize": 8562,
-          "optimized": false,
-          "height": 0,
-          "width": 0
+        "950e343b": {
+          "id": "950e343b",
+          "path": "app/ContentTypes/_panel.scss",
+          "output": "app/ContentTypes/_panel.css",
+          "name": "_panel.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
