fixes panels.scss path

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -449,7 +449,7 @@
           "output": "app/ContentTypes/_panel.css",
           "name": "_panel.scss",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -457,8 +457,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
           "type": "sass"
         }
       },
