moves all alternate styles to import

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -462,6 +462,26 @@
             "0115b650"
           ],
           "type": "sass"
+        },
+        "3c8daf7b": {
+          "id": "3c8daf7b",
+          "path": "app/ContentTypes/_stylestoimport.scss",
+          "output": "app/ContentTypes/_stylestoimport.css",
+          "name": "_stylestoimport.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0115b650"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
