updates some styles on newsroom

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -508,7 +508,7 @@
           "libSass": true,
           "compass": false,
           "fullCompass": false,
-          "outputStyle": "expanded",
+          "outputStyle": "compact",
           "customOutput": true,
           "imported": false,
           "parents": [],
